@@ -1,6 +1,12 @@
  'Supage Fun' Changelog:
  =======================
 
+* (trunk), 2011 - Version 0.5.2:
+  - Support for 'Parser Fun' extensions 'THIS' function added. With 'Parser Fun' enabled it now is possible to call
+    '{{THIS:SUBPAGETITLE}}' which will output the subpage title of the template or page where the phrase is defined on, not the
+    page which is actually being rendered by the parser as '{{SUBPAGETITLE}}' would output it.
+  - Parser function functions within 'ExtSubpageFun' class now have a 'pf_' prefix.
+
 * November 8, 2011 - Version 0.5.1:
   - All functions/variables returning page names in any way are using 'wfEscapeWikiText()' now like other variables like 'PAGENAME'
     for example.
